# gat2

./: .gitignore  CMakeLists.txt  README.markdown  config.hpp.in  gat2-qt5.patch  main.qrc
src/: AboutWidget.cpp  AboutWidget.hpp  CMakeLists.txt  CentralWidget.cpp  CentralWidget.hpp  EnumeratedTimeView.cpp  EnumeratedTimeView.hpp  MainWindow.cpp  MainWindow.hpp  PreferenceDialog.cpp  PreferenceDialog.hpp  SetTimerDialog.cpp  SetTimerDialog.hpp  TimeData.cpp  config_dialog.cpp  config_dialog.hpp  count_time_data.cpp  count_time_data.hpp  countdown_setting.cpp  countdown_setting.hpp  countup_box.cpp  customCounter.cpp  customCounter.hpp  main.cpp  main.qrc  mainwid.cpp  mainwid.hpp  mainwindow.cpp  mainwindow.hpp  p.hpp  timer.cpp  timer.hpp  version.hpp  xml.cpp  xml.hpp
src/resource/: Thumbs.db
src/resource/mac/: p_icon.icns
src/resource/text/: LICENSE
src/resource/win/: Thumbs.db  WinPICON.rc
src/resource/xmls/: template.xml
