PROJECT(gat2)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)

FIND_PACKAGE(Qt4 4.7.3 REQUIRED)

SET(MRSC ${PROJECT_SOURCE_DIR}/main.qrc)

SET(SRC_DIR ${PROJECT_SOURCE_DIR}/src)

MESSAGE(STATUS "Phonon ... " ${QT_PHONON_FOUND})
INCLUDE_DIRECTORIES(${QT_PHONON_INCLUDE_DIR})
LINK_DIRECTORIES(${QT_PHONON_LIBRARY})

IF(NOT MINGW AND UNIX)
	SET(P_UNIX ON)
	SET(P_WIN OFF)
ELSE()
	SET(P_UNIX OFF)
	SET(P_WIN ON)
ENDIF()
CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/config.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/config.hpp) #gen config.hpp file.

INCLUDE(${PROJECT_SOURCE_DIR}/src/CMakeLists.txt)
