PROJECT(gat2)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)

SET(GAT_VERSION_MAJOR "3")
SET(GAT_VERSION_MINOR "0")
SET(GAT_VERSION_PATCH "0")
SET(GAT_VERSION "${GAT_VERSION_MAJOR}.${GAT_VERSION_MINOR}.${GAT_VERSION_PATCH}")

MESSAGE(STATUS "VERSION -> ${GAT_VERSION}")

#FIND_PACKAGE(Qt4 4.8.0 REQUIRED)
FIND_PACKAGE(Qt5Widgets)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(MRSC ${PROJECT_SOURCE_DIR}/main.qrc)

SET(SRC_DIR ${PROJECT_SOURCE_DIR}/src)

#MESSAGE(STATUS "Phonon ... " ${QT_PHONON_FOUND})
#INCLUDE_DIRECTORIES(${QT_PHONON_INCLUDE_DIR})
#LINK_DIRECTORIES(${QT_PHONON_LIBRARY})

IF(NOT MINGW AND UNIX)
	SET(P_UNIX ON)
	SET(P_WIN OFF)
ELSE()
	SET(P_UNIX OFF)
	SET(P_WIN ON)
ENDIF()
IF(APPLE)
	OPTION(APPLE_UNIVERSAL_BIN "Apple: Build universal binary" OFF)
	IF(APPLE_UNIVERSAL_BIN)                                                                                       
		 SET(CMAKE_OSX_ARCHITECTURES x86_64;i386)
	ENDIF()
ENDIF()

#SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
#SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
#SET(CMAKE_CXX_FLAGS_DEBUG "-g")
#SET(CMAKE_CXX_FLAGS_MINSIZEREL "-Os")

CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/config.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/config.hpp) #gen config.hpp file.

INCLUDE(${PROJECT_SOURCE_DIR}/src/CMakeLists.txt)
